# pong_ai

./: CMakeLists.txt  README.md  agent.cpp  agent.hh  filehandle.cpp  filehandle.hh  gamewindow.cpp  gamewindow.hh  gamewindow.ui  main.cpp  state.cpp  state.hh  training.cpp  training.hh
